Source/WebCore: Reapplying: Background-blend-mode doesn't work for an element with an SVG image as background and border-style or padding set. The problem consisted in the drawing path using the default blending parameter at all times. https://bugs.webkit.org/show_bug.cgi?id=118894

Patch by Mihai Tica <mitica@adobe.com> on 2014-01-15
Reviewed by Dirk Schulze.

Test: css3/compositing/background-blend-mode-data-uri-svg-image.html

* svg/graphics/SVGImage.cpp:
(WebCore::SVGImage::drawPatternForContainer): Pass blendMode to Image::drawPattern.
* svg/graphics/SVGImage.h: Add a blendMode parameter to drawPatternForContainer.
* svg/graphics/SVGImageForContainer.cpp:
(WebCore::SVGImageForContainer::drawPattern): Pass blendMode to drawPatternForContainer call.

LayoutTests: Reapplying:
Background-blend-mode doesn't work for an element with an
SVG image as background and border-style or padding set.
Tests now use rectangles instead of circles for SVGs.
https://bugs.webkit.org/show_bug.cgi?id=118894

Patch by Mihai Tica <mitica@adobe.com> on 2014-01-15
Reviewed by Dirk Schulze.

* css3/compositing/background-blend-mode-data-uri-svg-image-expected.html:
* css3/compositing/background-blend-mode-data-uri-svg-image.html:
* platform/efl/TestExpectations: pass tests for efl, blendMode is not implemented.

Canonical link: https://commits.webkit.org/145043@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162066 268f45cc-cd09-0410-ab3c-d52691b4dbfc